# searchweb-dataset-construction

./: .claudeignore  .dockerignore  .env.example  .gitignore  ARCHITECTURE.MD  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.api  Dockerfile.worker  README.md  docker-compose.yml  docs_construction_v1.1.0.md  pyproject.toml  requirements-tools.txt  requirements.txt  site_url_list.txt  test.db
.serena/: project.yml
ai_url_classifier/: ARCHITECTURE.md  README.md  requirements.txt  research.md  run.py
ai_url_classifier/src/: config.py  keywords.py  models.py  pipeline.py  utils.py
ai_url_classifier/tests/: test_ai_scope_classifier.py  test_pipeline_management.py  test_status_policy.py  test_utils.py
alembic/: env.py
alembic/versions/: 2475942fca07_init_create_all_tables.py  (+5 more)
data/: ai-tools.json  test.json  test2.json  test2_20260515_090828.json  test_20260515_090524.json
docs/: AI_DETECTION_APPROACH_COMPARISON.md  API_SPECIFICATION.md  CATEGORY_TAXONOMY.md  CELERY_AND_RENDERING_COMPARISON.md  CLASSIFIER_MODES.md  DATA_MODEL.md  PHASE1_IMPLEMENTATION.md  PLANS.md  PROMPTS.md  TOKEN_OPTIMIZATION.md  gemini_model_comparison.md
src/: __init__.py  ai_scope_classifier.py  config.py  criteria_evaluator.py  discovery_signals.py  keywords.py  main.py  models.py  page_fetcher.py  status_policy.py  taxonomy_classifier.py  utils.py
src/ai/: __init__.py  (+6 more)
tests/: conftest.py  test_api.py  test_folders.py  test_links.py  test_saved_links.py  test_tags.py
tools/: FEATURES.md  README.md  excel_reader.py
url_ingest/: threads_url_extraction_research.md
(+130 files in other folders)
