[project]
name = "sw-test"
version = "0.1.0"
description = "Search Web Data Processing and Analysis System"
requires-python = ">=3.9"
dependencies = [
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "anthropic>=0.31.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
